Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134497

Mouse hover stylesheet does not renders correct color in windows11

XMLWordPrintable

    • Windows
    • b0dec15d2 (dev), 8d0f76217 (6.9), 0a16b4d04 (6.8)

      QPushButton

      { background-color: red; }

      QPushButton:hover

      { background-color: yellow; }

      on mouse hover on button does not shows button in yellow color. This only happens if you preview it in windows11 style. works good with windowsvista and other style if you preview in Designer.

        1. qtbug134497.zip
          20 kB
          Irfan Omair
        For Gerrit Dashboard: QTBUG-134497
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes