Windows11Style: allow overriding of palette for QPush/ToolButton

Honor the palette set by the stylesheet when drawing a
QPush/ToolButton.

Pick-to: 6.8
Fixes: QTBUG-134497
Change-Id: I33b9cdf8d4999e1fccdae250543db541b66b3b7d
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit b0dec15d2d9f0b8f18c7b071a68bf0702dcc0c4a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>